RESOLVED FIXED303740
[GTK][WPE] Fix ThreadedCompositor build without sysprof
https://bugs.webkit.org/show_bug.cgi?id=303740
Summary [GTK][WPE] Fix ThreadedCompositor build without sysprof
Olivier Blin
Reported 2025-12-08 02:21:55 PST
.
Attachments
Olivier Blin
Comment 1 2025-12-08 02:25:25 PST
EWS
Comment 2 2025-12-09 04:43:18 PST
Committed 304150@main (a09ca0292068): <https://commits.webkit.org/304150@main> Reviewed commits have been landed. Closing PR #55024 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.