[GTK][WPE] Fix ThreadedCompositor build without sysprof https://bugs.webkit.org/show_bug.cgi?id=303740

Reviewed by Michael Catanzaro and Adrian Perez de Castro.

The reasonsToString() helper is only used by a WTFEmitSignpost() call,
which evaluates to empty when sysprof is disabled.

This triggered -Werror=unused-function.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp:

Canonical link: https://commits.webkit.org/304150@main